--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -13,6 +13,24 @@ jobs:
               run: npm ci
             - name: run tests
               run: npm test
+            - name: Test Report
+              uses: dorny/test-reporter@v1
+              if: success() || failure()    # run this step even if previous step failed
+              with:
+                name: JEST Tests            # Name of the check run which will be created
+                path: reports/jest-*.xml    # Path to test results
+                reporter: jest-junit        # Format of test results
+    build-deploy:
+        runs-on: ubuntu-22.04
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+            - name: install node dependencies
+              run: npm ci
+            - name: build
+              run: npm build
+            - name: build
+              run: npm build
         
 
         
