--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           git config --global user.email "andrew.miller348@gmail.com"
           git config --global user.name "andmill"
-          git remote set-url origin https://andmill:${{ secrets.GITHUB_TOKEN }}@github.com/tst-mgmt/actions-demo-website
+          git remote set-url origin https://andmill:${{ secrets.DEPLOYMENT_TOKEN }}@github.com/tst-mgmt/actions-demo-website
       - name: install node dependencies
         run: npm ci        
       - name: deploy to github pages
