--- a/package.json
+++ b/package.json
@@ -47,5 +47,14 @@
     "jest": "^27.5.1",
     "jest-junit": "^16.0.0",
     "react-test-renderer": "^18.2.0"
+  },
+  "jest-junit": {
+    "outputDirectory": "reports",
+    "outputName": "jest-junit.xml",
+    "ancestorSeparator": " › ",
+    "uniqueOutputName": "false",
+    "suiteNameTemplate": "{filepath}",
+    "classNameTemplate": "{classname}",
+    "titleTemplate": "{title}"
   }
 }
