--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "actions-demo-website",
-  "homepage": "http://tst-mgmt.github.io/actions-demo-website/",
+  "homepage": "http://<yourUsername>.github.io/<your-repo-name>/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
